--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nwidart/post",
+    "name": "feriwnarta/post",
     "description": "",
     "type": "laravel-modul",
     "authors": [
