--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "laravel-module",
     "authors": [
         {
-            "name": "Nicolas Widart",
-            "email": "n.widart@gmail.com"
+            "name": "Feri winarta",
+            "email": "feriwnarta26@gmail.com"
         }
     ],
     "extra": {
